# edgy

./: .gitignore  Cargo.toml  README.md  flake.nix
edgy-style-demo/: Cargo.toml
edgy-style-demo/src/: main.rs
edgy-style-derive/: Cargo.toml
edgy-style-derive/simplecss/.github/workflows/: ci.yml
edgy-style-derive/simplecss/src/: selector.rs
edgy-style-derive/src/: lib.rs
examples/: basic.rs  image.rs  linear.rs  pfd.rs  plot.rs
src/: lib.rs  prelude.rs  style.rs
src/styles/: hope_diamond.rs  mod.rs
src/themes/: hope_diamond.rs  mod.rs
src/widgets/: alert.rs  battery.rs  button.rs  debug.rs  filler.rs  gauge.rs  grid_layout.rs  image.rs  label.rs  linear_layout.rs  margin.rs  margin_layout.rs  menu.rs  mod.rs  plot.rs  primitive.rs  root_layout.rs  slider.rs  stack_layout.rs  toggle_button.rs  warning_triangle.rs
