[package]
name = "edgy"
version = "0.1.0"
edition = "2021"

[dependencies]
eg-seven-segment = "0.2.0"
embedded-graphics = "0.8.1"
#heapless = "0.8.0"
micromath = "2.1.0"
edgy-style-derive = {path = "./edgy-style-derive" }

[dev-dependencies]
embedded-graphics-simulator = "0.7.0"
tinybmp = "0.6.0"
rand = "0.9.0"
